--- a/found.html
+++ b/found.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Item Hunt</title>
-  <!-- Load Firebase App and Firestore libraries -->
+  <!-- Load Firebase libraries -->
   <script src="https://www.gstatic.com/firebasejs/9.19.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.19.1/firebase-firestore-compat.js"></script>
   <style>
@@ -16,7 +16,7 @@
       text-align: center;
       padding: 20px;
     }
-    /* Container for the found item message box */
+    /* Styling for the found item message box */
     .found-box {
       width: 80%;
       max-width: 400px;
@@ -37,7 +37,7 @@
   </div>
 
   <script>
-    // Full Firebase configuration (using your provided config)
+    // Full Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyCiN_rH3ekJXC_W7MU2xZ77Vu7CYrS6uYQ",
       authDomain: "item-hunt.firebaseapp.com",
@@ -52,52 +52,53 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    // Retrieve the unique random code from the URL parameter.
-    // Each QR code points to a URL like: found.html?code=RANDOMCODE123
+    // Retrieve the code from the URL parameter, e.g. ?code=018Z7N2Q
     const urlParams = new URLSearchParams(window.location.search);
-    const randomCode = urlParams.get('code');
+    const urlCode = urlParams.get('code');
 
-    // Function to handle the found item.
-    function handleFoundItem(doc) {
-      // The document's ID can be used as the item code.
-      const itemCode = doc.id;
-      // Update the item in Firestore: mark as found and store the current date.
-      db.collection("items").doc(itemCode).set({
-        found: true,
-        dateFound: new Date().toISOString()
-      }, { merge: true })
-      .then(() => console.log("Item updated as found"))
-      .catch(error => console.error("Error updating item:", error));
-
-      // Update the found item page with the item's details.
-      document.getElementById('itemNumber').textContent = itemCode;
-      // Set the image source based on the item code (e.g., "001.jpg")
-      document.getElementById('itemImage').src = itemCode + ".jpg";
+    // If no code is provided, redirect to the main site.
+    if (!urlCode) {
+      window.location.href = "index.html";
     }
 
-    // If a random code was provided, query Firestore to find the matching item.
-    if (randomCode) {
-      // Query the "items" collection where the "randomCode" field matches the provided code.
-      db.collection("items").where("randomCode", "==", randomCode).get()
-        .then(querySnapshot => {
-          if (querySnapshot.empty) {
-            console.error("No item found for this code.");
-            document.getElementById('foundBox').innerHTML = "<p>Error: Item not found.</p>";
-          } else {
-            // If found, process the first matching document.
-            querySnapshot.forEach(doc => {
-              handleFoundItem(doc);
-            });
+    // Fetch the known codes document from Firestore.
+    db.collection("codes").doc("0wkfRuq3MOUsE58I8GIX").get()
+      .then(doc => {
+        if (!doc.exists) {
+          console.error("Codes document not found.");
+          window.location.href = "index.html";
+          return;
+        }
+        const codesData = doc.data();
+        let associatedItem = null;
+        // Loop through the fields (e.g., "01", "02", etc.) to find a match.
+        for (let key in codesData) {
+          if (codesData[key] === urlCode) {
+            associatedItem = key; // key holds the item number (e.g., "01")
+            break;
           }
-        })
-        .catch(error => {
-          console.error("Error querying item:", error);
-          document.getElementById('foundBox').innerHTML = "<p>Error retrieving item.</p>";
-        });
-    } else {
-      console.error("No random code provided in the URL.");
-      document.getElementById('foundBox').innerHTML = "<p>Error: No code provided.</p>";
-    }
+        }
+        // If the code isn't known, redirect to the main site.
+        if (!associatedItem) {
+          window.location.href = "index.html";
+          return;
+        }
+        // Update the item's status in Firestore (collection "items")
+        db.collection("items").doc(associatedItem).set({
+          found: true,
+          dateFound: new Date().toISOString()
+        }, { merge: true })
+        .then(() => console.log("Item updated as found"))
+        .catch(error => console.error("Error updating item:", error));
+
+        // Update the page to show the found item details.
+        document.getElementById('itemNumber').textContent = associatedItem;
+        document.getElementById('itemImage').src = associatedItem + ".jpg";
+      })
+      .catch(error => {
+        console.error("Error retrieving codes:", error);
+        window.location.href = "index.html";
+      });
   </script>
 </body>
 </html>
